--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,7 +173,22 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 70px;
+    margin-top: 102px;
+
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    height: 90px;
+    padding: 0 40px;
+    border-radius: 0.75rem;
+    background: #FFF;
+
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.10)
 }
 
 .guides .sub-title {
