fix bug phần social

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -646,7 +646,27 @@ a {
 }
 
 .footer .social {
+    display: flex;
     margin-top: 40px;
+}
+
+.footer .social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    border-radius: 3px;
+    background: #fdfdfd;
+
+}
+
+.footer .social-link+.social-link {
+    margin-left: 16px;
+}
+
+.footer .social-link:hover {
+    background-color: #ebebeb;
 }
 
 .footer .row-bottom {
