--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,16 +55,28 @@ a {
     overflow: hidden;}===*/
 
 /*========= header======*/
-.header {
+.fixed-header {
+    background-color: #E6F0FF;
+    ;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     position: relative;
-    background: orange;
+    background: #E6F0FF;
+    ;
     height: 100vh;
 }
 
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    /*padding-top: 38px; */
+    padding: 12px 0;
+
 }
 
 .navbar ul {
@@ -99,7 +111,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    padding-top: 130px;
 }
 
 .hero .info {
