fig bug phần logo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,8 +67,7 @@ a {
 .hero-wrap {
     position: relative;
     background: #E6F0FF;
-    ;
-    height: 100vh;
+    height: calc(100vh - 90px);
 }
 
 .navbar {
